# router/router.go
@@ -8,11 +8,11 @@ import (
 
 func Init(h *handler.Handler) *httprouter.Router {
 	router := httprouter.New()
-	router.GET("/", h.GetList)
-	router.POST("/", h.AddUser)
-	router.GET("/:id", h.GetUser)
-	router.DELETE("/:id", h.DeleteUser)
-	router.PUT("/:id", h.UpdateUser)
+	router.GET("/api/users/", h.GetList)
+	router.POST("/api/users/", h.AddUser)
+	router.GET("/api/users/:id", h.GetUser)
+	router.DELETE("/api/users/:id", h.DeleteUser)
+	router.PUT("/api/users/:id", h.UpdateUser)
 	return router
 
 }
